[tool.poetry]
name = "FMEA"
version = "0.1.0"
description = "Failure Mode and Effect Analysis for a generic document"
authors = ["Filipe Ferreira <filipedlferreira@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
pandas = "^2.1.3"
functions = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"